Add platform link (www.btwinai.com) to README and index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
         <div class="affiliation">
             Production AI Character Simulation Platform<br>
+            <a href="https://www.btwinai.com" target="_blank" style="font-weight: bold; font-size: 1.1em;">🚀 Try the Platform: www.btwinai.com →</a><br>
             <a href="https://www.wakenai.com/mst-prerelease" target="_blank">View Complete Study Results →</a>
         </div>
     </header>
