Add clickable LinkedIn links for authors across all HTML pages and README

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1 class="paper-title">Multi-Dimensional Prompt Engineering for Authentic AI Characters</h1>
         <p class="paper-subtitle">A Production-Validated System Serving 20,000 Conversations</p>
         <div class="authors">
-            <p><strong>Hassan Uriostegui</strong> (EB1A Computer Scientist)</p>
-            <p><strong>Lic. Fernanda Beltran</strong></p>
+            <p><strong><a href="https://www.linkedin.com/in/bensabbah/" target="_blank" style="color: inherit;">Hassan Uriostegui</a></strong> (EB1A Computer Scientist)</p>
+            <p><strong><a href="https://www.linkedin.com/in/fernanda-beltr%C3%A1n-d%C3%ADaz-de-le%C3%B3n-08ba481a9/" target="_blank" style="color: inherit;">Lic. Fernanda Beltran</a></strong></p>
         </div>
         <div class="affiliation">
             Production AI Character Simulation Platform<br>
