--- a/innovation-4-temporal-awareness.html
+++ b/innovation-4-temporal-awareness.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <h1 class="paper-title">Innovation 4: Temporal Awareness Layer</h1>
+        <div class="authors">
+            <p><strong><a href="https://www.linkedin.com/in/bensabbah/" target="_blank" style="color: inherit;">Hassan Uriostegui</a></strong> (EB1A Computer Scientist) & <strong><a href="https://www.linkedin.com/in/fernanda-beltr%C3%A1n-d%C3%ADaz-de-le%C3%B3n-08ba481a9/" target="_blank" style="color: inherit;">Lic. Fernanda Beltran</a></strong></p>
+        </div>
         <div class="affiliation">
             <a href="index.html">← Back to Main Paper</a> | 
             <a href="https://www.wakenai.com/mst-prerelease" target="_blank">View Production Results</a>
